# OpenStarboundVulkan

./: .gitignore  README.md
assets/opensb/: client.config.patch
assets/opensb/interface/windowconfig/: graphicsmenu.config.patch.lua
assets/opensb/rendering/: vulkan.config
source/: CMakeLists.txt  CMakePresets.json  vcpkg.json
source/application/: CMakeLists.txt  StarMainApplication_sdl.cpp  StarPlatformServices_pc.cpp  StarPlatformServices_pc.hpp  StarRenderer.hpp  StarRendererFactory.cpp  StarRendererFactory.hpp  StarRenderer_opengl.hpp  StarRenderer_vulkan.cpp  StarRenderer_vulkan.hpp
source/base/: StarAssets.cpp
source/client/: StarClientApplication.cpp  StarClientApplication.hpp
source/core/: StarFile_unix.cpp  StarSteamDeck.hpp
source/docs/: vulkan-dev.md  vulkan-renderer-config.md
source/frontend/: StarGraphicsMenu.cpp  StarGraphicsMenu.hpp  StarModsMenu.cpp
source/game/: StarActorMovementController.cpp  StarEntityMap.cpp  StarEntityMap.hpp  StarItem.cpp  StarItem.hpp  StarItemDatabase.cpp  StarItemDatabase.hpp  StarMovementController.cpp  StarMovementController.hpp  StarPlatformerAStar.cpp  StarRoot.cpp  StarRoot.hpp  StarTileSectorArray.hpp  StarUniverseServer.cpp  StarWeather.cpp  StarWeather.hpp  StarWorldClient.cpp  StarWorldClient.hpp  StarWorldRenderData.hpp  StarWorldServer.cpp
source/plugins/starbound-vulkan-dev/.codex-plugin/: plugin.json
source/plugins/starbound-vulkan-dev/scripts/: bootstrap.sh  check-vulkan.sh  install-codex-assets.sh  install-vscode-extensions.sh  run-opengl.sh  run-vulkan.sh  setup-local.sh
source/plugins/starbound-vulkan-dev/skills/vulkan-workflow/: SKILL.md
source/rendering/: StarEnvironmentPainter.cpp  StarFontTextureGroup.cpp  StarTextPainter.cpp  StarTilePainter.cpp  StarTilePainter.hpp  StarWorldPainter.cpp  StarWorldPainter.hpp
source/scripts/dev/: bootstrap_vcpkg.sh  check_vulkan_stack.sh  ensure_tmpdir.sh  install_codex_assets.sh  install_vscode_extensions.sh  install_vulkan_toolchain.sh  run_starbound_opengl.sh  run_starbound_vulkan.sh  setup_starbound_vulkan_local.sh
source/test/: StarTestUniverse.cpp
source/utility/: CMakeLists.txt
source/windowing/: StarGuiContext.cpp  StarGuiContext.hpp  StarItemSlotWidget.cpp  StarLabelWidget.cpp  StarLabelWidget.hpp  StarTextBoxWidget.cpp  StarWidget.cpp
